tests/ui/parser/issues/issue-105209.rs
//@ compile-flags: -Zunpretty=ast-tree
#![c={#![c[)x
                //~ ERROR this file contains an unclosed delimiter
